--- a/app/views/irm/lanes/select_cards.html.erb
+++ b/app/views/irm/lanes/select_cards.html.erb
@@ -1,41 +1,40 @@
 <%= page_title %>
+<style type="text/css">
+    .page-block-button form {
+        margin: 0;
+    }
+</style>
 <% if @lane %>
-    <%= form_tag({:action => 'add_cards',:id => @lane}) do%>
-        <%= hidden_field_tag "return_url", @return_url%>
-        <div class="srch">
-            <div class="pbHeader">
-                <table cellpadding="0" cellspacing="0" border="0">
-                  <tbody>
-                    <tr>
-                      <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_select_result) %></h2></td>
-                      <td id="topButtonRow1" class="pbButton">
-                        <div class="button"><%= submit_tag t(:save)%></div>
-                        <% if !@return_url.blank? %>
-                          <div class="button"><%= link_to t(:cancel), @return_url%></div>
-                        <% else %>
-                          <div class="button"><%= link_to t(:cancel), {:action => "show",:id=>@lane}%></div>
-                        <% end %>
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-            </div>
-        </div>
-        <div id="ep" class="edit-block page-block">
-          <div class="pbBody">
-                <div id="available_cards_list" class="datatable" style="width:100%;">
-                  <div id="id" style="display:none">
-                     <%= check_box_tag "irm_lane_cards[ids][]","{id}"%>
-                  </div>
-                </div>
-                <%= datatable("available_cards_list",url_for(:action=>"get_available_cards", :id=>@lane),
-                          [{:key=>"id",:label=>t(:select_ac),:formatter=>"Y.irm.template",:width=>"20px"},
-                           {:key=>"card_code",:label=>t(:label_irm_card_code),:width => "15%"},
-                           {:key=>"card_name",:label=>t(:name), :width => "25%"},
-                           {:key=>"card_description",:label=>t(:description)},
-                           {:key=>"background_color",:label=>t(:label_irm_card_background_color), :width => "80px"}
-                           ],{:row_perpage=>5})%>
-          </div>
-        </div>
-    <% end %>
+    <!--页面结构-->
+    <div class="page-block">
+      <table class="page-block-header"><tr>
+        <td class="page-block-title">
+          <h2 class="block-title"><%= t(:label_irm_select_result) %></h2>
+        </td>
+        <td class="page-block-button">
+          <%= form_tag({:action => 'add_cards',:id => @lane}) do%>
+            <%= hidden_field_tag "return_url", @return_url%>
+              <%= hidden_field_tag(:card_ids) %>
+            <%= link_submit t(:save), :class=>"btn btn-primary" %>
+            <% if !@return_url.blank? %>
+              <%= link_to t(:cancel), @return_url, :class => "btn"%>
+            <% else %>
+              <%= link_to t(:cancel), {:action => "show",:id=>@lane},:class => "btn"%>
+            <% end %>
+          <% end %>
+        </td>
+      </tr></table>
+      <div class="page-block-body">
+        <div id="available_cards_list"></div>
+        <%= datatable("available_cards_list",{:action=>"get_available_cards",:id=>@lane},[],{:paginator_box=>"paginatorBox",:select=>"multiple"})%>
+      </div>
+    </div>
 <% end %>
+
+<script type="text/javascript">
+    $(document).ready(function(){
+        $("#available_cards_list").bind('selectionchange',function(event,ids){
+            $("#card_ids").val(ids.join(","));
+        });
+    });
+</script>
