--- a/app/views/irm/lanes/show.html.erb
+++ b/app/views/irm/lanes/show.html.erb
@@ -1,85 +1,54 @@
 <%= common_title(:show_data=>@lane[:name]) %>
 
-<div id="ep" class="detail-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
+<!--页面结构-->
+<div class="show-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%= t(:label_irm_lane) %></h2>
+    </td>
+    <td class="page-block-button">
+      <%= link_to t(:edit), {:action => "edit", :id => @lane},:class=>"btn btn-primary"%>
+      <%= link_to t(:back), {:action => "index"},:class=>"btn" %>
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <table class="show-table">
       <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_lane) %></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= link_to t(:edit), {:action => "edit", :id => @lane}%></div>
-            <div class="button"><%= link_to t(:back), {:action => "index"} %></div>
-          </td>
-        </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_irm_lane_code)%></label></td>
+            <td class="data-2col"><div><%= @lane.lane_code%></div></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :name)%></label></td>
+            <td class="data-2col"><div><%= @lane[:name]%></div></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :description)%></label></td>
+            <td class="dataCol"><%= @lane[:description]%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :active)%></label></td>
+            <td class="data-2col"><div><%= check_img(@lane.status_code)%></div></td>
+          </tr>
       </tbody>
     </table>
   </div>
-  <div class="pbBody">
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_irm_lane_code)%></label></td>
-              <td class="data2Col"><div><%= @lane.lane_code%></div></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :name)%></label></td>
-              <td class="data2Col"><div><%= @lane[:name]%></div></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :description)%></label></td>
-              <td class="dataCol"><%= @lane[:description]%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :active)%></label></td>
-              <td class="data2Col"><div><%= check_img(@lane.status_code)%></div></td>
-            </tr>
-        </tbody>
-      </table>
-    </div>
+</div>
+
+<!--页面结构-->
+<div class="page-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%=t(:label_irm_lane_owned_cards)%></h2>
+    </td>
+    <td class="page-block-button">
+      <%= link_to t(:label_irm_lane_add_card), {:controller=>"irm/lanes",:action => "select_cards",:id=>@lane.id},:class => "btn"%>
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <div id="owned_cards_list"></div>
+    <%= datatable("owned_cards_list",{:controller=>"irm/lanes",:action=>"get_owned_cards",:id=>@lane.id},[])%>
   </div>
 </div>
 
-<div class="bRelatedList">
-    <div class="listRelatedObject taskBlock">
-      <div class="page-block secondary-palette">
-        <div class="pbHeader">
-          <table cellspacing="0" cellpadding="0" border="0">
-            <tbody>
-            <tr>
-              <td class="pbTitle">
-                <h3><%=t(:label_irm_lane_owned_cards)%></h3>
-              </td>
-              <td class="pbButton">
-                <div class="button"><%= link_to t(:label_irm_lane_add_card), {:controller=>"irm/lanes",
-                                                          :action => "select_cards",:id=>@lane.id}%></div>
-              </td>
-              <td class="pbHelp">
-              </td>
-            </tr>
-            </tbody>
-          </table>
-        </div>
-        <div class="pbBody">
-          <div id="owned_cards_list" class="datatable" style="width:100%;">
-            <div id="id" style="display:none">
-              <%= icon_link_remove({:controller=>"irm/lanes",:action=>"delete_card",:card_id=>"{irm_card_id}",:lane_id => @lane.id},:confirm => t(:label_are_you_sure) ,
-                                      :method => :delete) %>
-            </div>
-          </div>
-          <!-- Begin company access table -->
-            <%= datatable("owned_cards_list",{:controller=>"irm/lanes",:action=>"get_owned_cards",:id=>@lane.id},
-                              [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"40px"},
-                               {:key =>"irm_card_id", :hidden =>true},
-                               {:key=>"card_code",:label=>t(:label_irm_card_code),:width => "150px"},
-                               {:key=>"card_name",:label=>t(:name), :width => "150px"},
-                               {:key=>"card_description",:label=>t(:description), :width => "200px"},
-                               {:key=>"background_color",:label=>t(:label_irm_card_background_color)}])%>
-        </div>
-        <div class="pbFooter secondary-palette">
-        <div class="bg"></div>
-        </div>
-      </div>
-    </div>
-</div>
 <%=render :partial=>"multilingual/show",:locals=>{:main_data=>@lane} %>
